--- a/src/app/store/dialogs/product-details/store-product-details-dialog.component.html
+++ b/src/app/store/dialogs/product-details/store-product-details-dialog.component.html
@@ -1,23 +1,19 @@
 <div class="dialog">
-  <div class="thumbnail">
-    <img [src]="product.imagesURL[0]" [alt]="product.name" />
-  </div>
+  <img [src]="product.imagesURL[0]" [alt]="product.name" />
   <div class="about">
     <h2 class="name">{{ product.name }}</h2>
     <h4 class="barcode">{{ product.barcode }}</h4>
-    <div class="description">
-      <span>{{ product.description }}</span>
-    </div>
+    <p class="description">{{ product.description }}</p>
   </div>
-  <div class="add-to-cart">
-    <h3>${{ product.price }}</h3>
-    <div class="quantity">
-      <button mat-button mat-icon-button
+  <div class="actions">
+    <span class="price">${{ product.price }}</span>
+    <div class="quantity-wrapper">
+      <button mat-button mat-icon-button type="button"
         (click)="onClickIncreaseProductQuantity()">
-        <mat-icon>add</mat-icon>
+        <mat-icon>add </mat-icon>
       </button>
-      {{ productUnitsInCart$ | async }}
-      <button mat-button mat-icon-button
+      <span class="quantity">{{ productUnitsInCart$ | async }}</span>
+      <button mat-button mat-icon-button type="button"
         [disabled]="productNotInCart$ | async"
         (click)="onClickDecreaseProductQuantity()">
         <mat-icon>remove</mat-icon>
