--- a/src/app/management/routes/employees/employee-manager.component.html
+++ b/src/app/management/routes/employees/employee-manager.component.html
@@ -22,20 +22,16 @@
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> </th>
           <td mat-cell *matCellDef="let employee">
-            <div class="acciones">
-              <button mat-button mat-icon-button
-                color="primary"
-                [disabled]="busy$ | async"
-                (click)="onClickEdit(employee)">
-                <mat-icon>edit</mat-icon>
-              </button>
-              <button mat-button mat-icon-button
-                color="warn"
-                [disabled]="busy$ | async"
-                (click)="onClickDelete(employee)">
-                <mat-icon>delete</mat-icon>
-              </button>
-            </div>
+            <button mat-button mat-icon-button type="button"
+              color="primary"
+              (click)="onClickEdit(employee)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-button mat-icon-button type="button"
+              color="warn"
+              (click)="onClickDelete(employee)">
+              <mat-icon>delete</mat-icon>
+            </button>
           </td>
         </ng-container>
 
