fixes template and styles for product manager

--- a/src/app/management/routes/products/product-manager.component.html
+++ b/src/app/management/routes/products/product-manager.component.html
@@ -22,7 +22,7 @@
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef> Precio </th>
           <td mat-cell *matCellDef="let product">
-            {{ product.price }}
+            ${{ product.price }}
           </td>
         </ng-container>
         <ng-container matColumnDef="currentStock">
