--- a/src/app/management/routes/products/form-dialog/product-manager-form-dialog.component.html
+++ b/src/app/management/routes/products/form-dialog/product-manager-form-dialog.component.html
@@ -46,7 +46,7 @@
         <textarea matInput placeholder="Descripción" formControlName="description"></textarea>
       </mat-form-field>
 
-      <div class="actions">
+      <div style="grid-area: actions" class="actions">
         <button mat-button mat-raised-button type="submit"
           color="primary"
           [disabled]="formGroup.invalid">
