corrects variable name language

--- a/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
+++ b/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
@@ -7,7 +7,7 @@
     <form [formGroup]="formGroup" (submit)="onSubmit()">
 
       <mat-form-field style="grid-area: date">
-        <input matInput placeholder="Fecha de Solicitud" [ngModel]="fechaSolicitud"
+        <input matInput placeholder="Fecha de Solicitud" [ngModel]="orderDate"
           [ngModelOptions]="{ standalone: true }" disabled />
       </mat-form-field>
 
