--- a/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
+++ b/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
@@ -55,16 +55,12 @@
               <th mat-header-cell *matHeaderCellDef> Cantidad </th>
               <td mat-cell *matCellDef="let detail; let i=index">
                 <div>
-                  <button mat-button mat-icon-button
+                  <button mat-button mat-icon-button type="button"
                     (click)="onClickIncreaseDetailProductQuantity(i)">
                     <mat-icon>add</mat-icon>
                   </button>
-                  <input matInput class="quantity" type="number"
-                    min="1"
-                    [(ngModel)]="detail.units"
-                    [ngModelOptions]="{ standalone: true }" />
-                  <button mat-button mat-icon-button
-                    [disabled]="detail.units < 2"
+                  {{ detail.units }}
+                  <button mat-button mat-icon-button type="button"
                     (click)="onClickDecreaseDetailProductQuantity(i)">
                     <mat-icon>remove</mat-icon>
                   </button>
@@ -75,7 +71,8 @@
               <th mat-header-cell *matHeaderCellDef> </th>
               <td mat-cell *matCellDef="let i=index">
                 <div>
-                  <button mat-button mat-icon-button color="warn"
+                  <button mat-button mat-icon-button type="button"
+                    color="warn"
                     [disabled]="busy$ | async"
                     (click)="onClickRemoveDetail(i)">
                     <mat-icon>delete</mat-icon>
@@ -93,7 +90,7 @@
       <div style="grid-area: actions" class="actions">
         <button mat-button mat-raised-button type="submit"
           color="primary"
-          [disabled]="formGroup.invalid">
+          [disabled]="orderIsntReady$ | async">
           Aceptar
         </button>
         <button mat-button mat-raised-button type="button"
