adds interaction to view company details

--- a/src/app/store/header/store-header.component.html
+++ b/src/app/store/header/store-header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <div class="logo">
+  <div class="logo" (click)="onClickViewCompanyDetails()">
     <mat-icon>store</mat-icon>
     <h1 >{{ title }}</h1>
   </div>
