--- a/src/app/store/header/store-header.component.css
+++ b/src/app/store/header/store-header.component.css
@@ -20,6 +20,10 @@
   flex: 0 0 auto;
   padding: 0 0.5rem;
   align-items: center;
+  cursor: pointer;
+}
+.logo:hover {
+  background-color: rgba(0,0,0,0.2);
 }
 
 .logo>mat-icon {
