--- a/src/app/management/footer/management-footer.component.css
+++ b/src/app/management/footer/management-footer.component.css
@@ -1,8 +1,11 @@
 .footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
   background-color: var(--color-bg-secondary-light);
-  padding: 0.5em 0;
+  padding: 0.25rem 0;
   border-top: 1px #e0e0e06b solid;
+}
+@media(min-width: 800px) {
+  .footer {
+    padding: 0.5rem 0;
+  }
 }
