--- a/src/app/management/sidenav/management-sidenav.component.css
+++ b/src/app/management/sidenav/management-sidenav.component.css
@@ -1,6 +1,6 @@
 .sidenav {
   min-height: 100%;
-  width: 100%;
+  width: 12rem;
   background-color: var(--color-bg);
 }
 @media(min-width: 800px) {
@@ -12,10 +12,9 @@
 
 mat-nav-list {
   min-height: 100%;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-evenly;
-  padding: 0;
+  display: grid;
+  padding: 0.5rem 0;
+  grid-gap: 0.5rem;
 }
 
 mat-nav-list * {
@@ -24,16 +23,13 @@ mat-nav-list * {
 
 mat-nav-list a {
   height: 100%;
-  font-size: 2rem;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
+  font-size: 1.2rem;
 }
 
 a mat-icon {
-  font-size: 4rem;
-  width: 4rem;
-  height: 4rem;
+  font-size: 2rem;
+  width: 2rem;
+  height: 2rem;
   margin-right: 0.5em;
 }
 @media(min-width: 800px) {
