add/use observables for interaction with routes

--- a/src/app/management/header/management-header.component.html
+++ b/src/app/management/header/management-header.component.html
@@ -10,7 +10,7 @@
     <h1>{{ appName }}</h1>
   </div>
   <div class="middle">
-    <!-- <span>{{ moduleName }}</span> -->
+    <span>{{ moduleName$ | async }}</span>
   </div>
   <mat-menu #headerMenu>
     <span mat-menu-item disabled>{{ userName }}</span>
