--- a/src/app/store/dialogs/product-details/store-product-details-dialog.component.css
+++ b/src/app/store/dialogs/product-details/store-product-details-dialog.component.css
@@ -35,23 +35,41 @@ img {
 
 .actions {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
+  flex-flow: column nowrap;
   align-items: center;
+}
+@media(min-width: 800px) {
+  .actions {
+    flex-flow: row nowrap;
+  }
 }
 .price {
   font-size: 1.25rem;
+  font-weight: 600;
   color: #558b2f;
-  margin: 0 0.5rem;
+  margin: 0 auto;
 }
 @media(min-width: 800px) {
   .price {
     font-size: 1.75rem;
+    margin: 0 auto 0 0.5rem;
   }
 }
-.quantity-wrapper {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-around;
+.add-to-cart {
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 1rem;
   align-items: center;
+}
+.add-to-cart > mat-icon {
+  font-size: 1.75rem;
+  width: 1.75rem;
+  height: 1.75rem;
+}
+.quantity-wrapper {
+  display: grid;
+  grid-auto-flow: column;
+  align-items: center;
+  font-size: 1.25rem;
+  grid-gap: 0.5rem;
 }
