--- a/src/assets/styles/color-theme.css
+++ b/src/assets/styles/color-theme.css
@@ -4,9 +4,9 @@
   --color-bg: #6a1b9a;
   --color-bg-light: #9c4dcc;
   --color-bg-dark: #38006b;
-  --color-bg-secondary: #eeeeee;
-  --color-bg-secondary-light: #ffffff;
-  --color-bg-secondary-dark: #bcbcbc;
-  --color-content: #ffffff;
+  --color-bg-secondary: #ccc;
+  --color-bg-secondary-light: #eee;
+  --color-bg-secondary-dark: #aaa;
+  --color-content: #fff;
   --color-content-secondary: #6a1b9a;
 }
