--- a/src/app/store/footer/store-footer.component.css
+++ b/src/app/store/footer/store-footer.component.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-bg-secondary-light);
+  background-color: var(--color-bg-secondary);
   padding: 0.5em 0;
   border-top: 1px #e0e0e06b solid;
 }
