correct 'cancel' behavior creating data

--- a/src/app/management/routes/employees/form-dialog/employee-manager-form-dialog.component.html
+++ b/src/app/management/routes/employees/form-dialog/employee-manager-form-dialog.component.html
@@ -23,7 +23,7 @@
           [disabled]="formGroup.invalid">
           Aceptar
         </button>
-        <button mat-button mat-raised-button
+        <button mat-button mat-raised-button type="button"
           (click)="onCancel()">
           Cancelar
         </button>
