--- a/src/app/management/routes/providers/form-dialog/provider-manager-form-dialog.component.html
+++ b/src/app/management/routes/providers/form-dialog/provider-manager-form-dialog.component.html
@@ -19,7 +19,7 @@
           [disabled]="formGroup.invalid">
           Aceptar
         </button>
-        <button mat-button mat-raised-button
+        <button mat-button mat-raised-button type="button"
           (click)="onCancel()">
           Cancelar
         </button>
