--- a/src/app/management/dialogs/products-array/products-array-dialog.component.html
+++ b/src/app/management/dialogs/products-array/products-array-dialog.component.html
@@ -90,11 +90,11 @@
     <button mat-button mat-raised-button type="button"
       color="primary"
       [disabled]="isArrayEmpty$ | async"
-      (click)="onClickAccept()">
+      [mat-dialog-close]="productsArray$ | async">
       Aceptar
     </button>
     <button mat-button mat-raised-button type="button"
-      (click)="onClickCancel()">
+      [mat-dialog-close]="[]">
       Cancelar
     </button>
   </div>
