correct functionality of certain product-lists

--- a/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
+++ b/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
@@ -66,6 +66,7 @@
                 </button>
                 {{ detail.units }}
                 <button mat-button mat-icon-button type="button"
+                  [disabled]="detail.units < 2"
                   (click)="onClickDecreaseDetailProductQuantity(i)">
                   <mat-icon>remove</mat-icon>
                 </button>
