--- a/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
+++ b/src/app/management/routes/purchase_orders/form-dialog/purchase-order-manager-form-dialog.component.html
@@ -61,6 +61,7 @@
                   </button>
                   {{ detail.units }}
                   <button mat-button mat-icon-button type="button"
+                    [disabled]="detail.units < 2"
                     (click)="onClickDecreaseDetailProductQuantity(i)">
                     <mat-icon>remove</mat-icon>
                   </button>
