minor html lint

--- a/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.html
+++ b/src/app/store/dialogs/guest-prompt/store-guest-prompt-dialog.component.html
@@ -4,15 +4,18 @@
     <span>Si desea volver al carro de compra, haga clic fuera de este diálogo.</span>
   </div>
   <div class="actions">
-    <button mat-button mat-raised-button color="primary"
+    <button mat-button mat-raised-button type="button"
+      color="primary"
       (click)="onClickOption('login')">
       Iniciar sesión
     </button>
-    <button mat-button mat-raised-button color="warn"
+    <button mat-button mat-raised-button type="button"
+      color="warn"
       (click)="onClickOption('register')">
       Registrarme
     </button>
-    <button mat-button mat-raised-button color="default"
+    <button mat-button mat-raised-button type="button"
+      color="default"
       (click)="onClickOption('guest')">
       Continuar sin cuenta
     </button>
