--- a/src/app/management/header/management-header.component.html
+++ b/src/app/management/header/management-header.component.html
@@ -1,33 +1,35 @@
 <div class="header">
-  <button mat-button class="toggle-sidenav action"
+  <button mat-button type="button"
+    class="toggle-sidenav action"
     color="warn"
     title="Alternar menú lateral"
     (click)="switchSidenavOpenState()">
     <mat-icon>menu</mat-icon>
   </button>
   <div class="logo">
-    <img src="assets/img/logo.png" alt="FERME">
-    <h1>{{ appName }}</h1>
+    <h1 class="desktop">{{ desktopTitle }}</h1>
+    <h1 class="mobile">{{ mobileTitle }}</h1>
   </div>
   <div class="middle">
     <span>{{ moduleName$ | async }}</span>
   </div>
   <mat-menu #headerMenu>
     <span mat-menu-item disabled>{{ userName }}</span>
-    <button mat-menu-item
+    <button mat-menu-item type="button"
       title="Editar Perfil"
       (click)="onClickEditProfile()">
       <mat-icon>edit</mat-icon>
       Editar Perfil
     </button>
-    <button mat-menu-item
+    <button mat-menu-item type="button"
       title="Cerrar Sesion"
       (click)="onClickLogout()">
       <mat-icon>exit_to_app</mat-icon>
       Cerrar sesion
     </button>
   </mat-menu>
-  <button mat-button class="open-menu action"
+  <button mat-button type="button"
+    class="open-menu action"
     [matMenuTriggerFor]="headerMenu">
     <mat-icon>person</mat-icon>
   </button>
