--- a/src/app/store/header/store-header.component.html
+++ b/src/app/store/header/store-header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="logo" (click)="onClickViewCompanyDetails()">
-    <mat-icon>store</mat-icon>
-    <h1 >{{ title }}</h1>
+    <h1 class="desktop">{{ desktopTitle }}</h1>
+    <h1 class="mobile">{{ mobileTitle }}</h1>
   </div>
   <div class="navigation">
     <a mat-button title="Ir al Catálogo de Productos" routerLink="/store">
@@ -23,24 +23,28 @@
   <ng-container *ngIf="(isLoggedIn$ | async); else notLoggedIn">
     <mat-menu #headerMenu>
       <span mat-menu-item disabled>{{ userName$ | async }}</span>
-      <button mat-menu-item class="edit-profile"
+      <button mat-menu-item type="button"
+        class="edit-profile"
         (click)="onClickEditProfile()">
         <mat-icon>edit</mat-icon>
         Editar Perfil
       </button>
-      <button mat-menu-item class="logout"
+      <button mat-menu-item type="button"
+        class="logout"
         (click)="onClickLogout()">
         <mat-icon>exit_to_app</mat-icon>
         Cerrar Sesión
       </button>
     </mat-menu>
-    <button mat-button class="open-menu action" title="Menú de usuario"
+    <button mat-button type="button"
+      class="open-menu action" title="Menú de usuario"
       [matMenuTriggerFor]="headerMenu">
       <mat-icon>person</mat-icon>
     </button>
   </ng-container>
   <ng-template #notLoggedIn>
-    <button mat-button class="login action" title="Aún no has iniciado sesión"
+    <button mat-button type="button"
+      class="login action" title="Aún no has iniciado sesión"
       (click)="onClickLogIn()">
       <mat-icon>person_outline</mat-icon>
     </button>
