more accurate verb

--- a/src/app/store/header/store-header.component.html
+++ b/src/app/store/header/store-header.component.html
@@ -33,7 +33,7 @@
         class="logout"
         (click)="onClickLogout()">
         <mat-icon>exit_to_app</mat-icon>
-        Cerrar Sesión
+        Terminar Sesión
       </button>
     </mat-menu>
     <button mat-button type="button"
