--- a/src/app/management/header/management-header.component.html
+++ b/src/app/management/header/management-header.component.html
@@ -25,7 +25,7 @@
       title="Cerrar Sesion"
       (click)="onClickLogout()">
       <mat-icon>exit_to_app</mat-icon>
-      Cerrar sesion
+      Terminar sesión
     </button>
   </mat-menu>
   <button mat-button type="button"
