--- a/src/app/management/header/management-header.component.html
+++ b/src/app/management/header/management-header.component.html
@@ -16,6 +16,12 @@
   <mat-menu #headerMenu>
     <span mat-menu-item disabled>{{ userName$ | async }}</span>
     <button mat-menu-item type="button"
+      class="navigate-store"
+      (click)="onClickNavigateToStore()">
+      <mat-icon>storefront</mat-icon>
+      Volver a la Tienda
+    </button>
+    <button mat-menu-item type="button"
       title="Editar Perfil"
       (click)="onClickEditProfile()">
       <mat-icon>edit</mat-icon>
