--- a/src/app/store/header/store-header.component.html
+++ b/src/app/store/header/store-header.component.html
@@ -26,7 +26,7 @@
       <button mat-menu-item type="button"
         *ngIf="canNavigateManagement$ | async"
         class="edit-profile"
-        (click)="onClickNavigateToManagement()">
+        [routerLink]="['/management']">
         <mat-icon>tune</mat-icon>
         Administrar
       </button>
