--- a/src/app/management/header/management-header.component.html
+++ b/src/app/management/header/management-header.component.html
@@ -31,7 +31,7 @@
       title="Cerrar Sesion"
       (click)="onClickLogout()">
       <mat-icon>exit_to_app</mat-icon>
-      Terminar sesión
+      Terminar Sesión
     </button>
   </mat-menu>
   <button mat-button type="button"
