--- a/src/app/store/routes/catalog/product-card/store-catalog-product-card.component.html
+++ b/src/app/store/routes/catalog/product-card/store-catalog-product-card.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="actions">
     <span class="price">${{ product?.price }}</span>
-    <button mat-button mat-icon-button type="button"
+    <button mat-button mat-raised-button type="button"
       class="add-to-cart"
       color="primary"
       (click)="onClickAddProduct()">
