--- a/src/app/management/routes/employees/employee-manager.component.html
+++ b/src/app/management/routes/employees/employee-manager.component.html
@@ -23,12 +23,14 @@
           <th mat-header-cell *matHeaderCellDef> </th>
           <td mat-cell *matCellDef="let employee">
             <button mat-button mat-icon-button type="button"
+              *ngIf="canEdit$ | async"
               color="primary"
               [disabled]="busy$ | async"
               (click)="onClickEdit(employee)">
               <mat-icon>edit</mat-icon>
             </button>
             <button mat-button mat-icon-button type="button"
+              *ngIf="canDelete$ | async"
               color="warn"
               [disabled]="busy$ | async"
               (click)="onClickDelete(employee)">
@@ -43,6 +45,7 @@
 
     </div>
     <app-management-data-actions
+      *ngIf="canAdd$ | async"
       (add)="onClickAdd()">
     </app-management-data-actions>
   </div>
