--- a/src/app/management/routes/users/user-manager.component.html
+++ b/src/app/management/routes/users/user-manager.component.html
@@ -36,12 +36,14 @@
           <td mat-cell *matCellDef="let user">
             <div>
               <button mat-button mat-icon-button type="button"
+                *ngIf="canEdit$ | async"
                 color="primary"
                 [disabled]="busy$ | async"
                 (click)="onClickEdit(user)">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-button mat-icon-button type="button"
+                *ngIf="canDelete$ | async"
                 color="warn"
                 [disabled]="busy$ | async"
                 (click)="onClickDelete(user)">
@@ -57,6 +59,7 @@
     </div>
 
     <app-management-data-actions
+      *ngIf="canAdd$ | async"
       (add)="onClickAdd()">
     </app-management-data-actions>
   </div>
