--- a/src/app/management/routes/sellers/seller-manager.component.html
+++ b/src/app/management/routes/sellers/seller-manager.component.html
@@ -9,31 +9,31 @@
       <table mat-table class="full-width-min" [dataSource]="items$">
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let employee">
-            {{ employee.person.name }}
+          <td mat-cell *matCellDef="let seller">
+            {{ seller.person.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="idCard">
           <th mat-header-cell *matHeaderCellDef> Rut </th>
-          <td mat-cell *matCellDef="let employee">
-            {{ employee.person.idCard }}
+          <td mat-cell *matCellDef="let seller">
+            {{ seller.person.idCard }}
           </td>
         </ng-container>
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let employee">
+          <td mat-cell *matCellDef="let seller">
             <button mat-button mat-icon-button type="button"
               *ngIf="canEdit$ | async"
               color="primary"
               [disabled]="busy$ | async"
-              (click)="onClickEdit(employee)">
+              (click)="onClickEdit(seller)">
               <mat-icon>edit</mat-icon>
             </button>
             <button mat-button mat-icon-button type="button"
               *ngIf="canDelete$ | async"
               color="warn"
               [disabled]="busy$ | async"
-              (click)="onClickDelete(employee)">
+              (click)="onClickDelete(seller)">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
