--- a/src/app/management/routes/clients/client-manager.component.html
+++ b/src/app/management/routes/clients/client-manager.component.html
@@ -1,30 +1,27 @@
-<div class="full-size">
-
-  <centered-mat-spinner *ngIf="loading$ | async">
+<div class="loading" *ngIf="loading$ | async">
+  <centered-mat-spinner>
   </centered-mat-spinner>
+</div>
+<div class="data-manager" [hidden]="loading$ | async">
+  <div class="table-wrapper">
 
-  <div class="data-manager" [hidden]="loading$ | async">
-    <div class="table-wrapper">
+    <table mat-table class="full-width-min" [dataSource]="items$">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let client">
+          {{ client.person.name }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="idCard">
+        <th mat-header-cell *matHeaderCellDef> Rut </th>
+        <td mat-cell *matCellDef="let client">
+          {{ client.person.idCard }}
+        </td>
+      </ng-container>
 
-      <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let client">
-            {{ client.person.name }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="idCard">
-          <th mat-header-cell *matHeaderCellDef> Rut </th>
-          <td mat-cell *matCellDef="let client">
-            {{ client.person.idCard }}
-          </td>
-        </ng-container>
+      <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
+    </table>
 
-        <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
-      </table>
-
-    </div>
   </div>
-
 </div>
