--- a/src/app/management/routes/products/product-manager.component.html
+++ b/src/app/management/routes/products/product-manager.component.html
@@ -1,77 +1,74 @@
-<div class="full-size">
-
-  <centered-mat-spinner *ngIf="loading$ | async">
+<div class="loading" *ngIf="loading$ | async">
+  <centered-mat-spinner>
   </centered-mat-spinner>
+</div>  
+<div class="data-manager" [hidden]="loading$ | async">
+  <div class="table-wrapper">
 
-  <div class="data-manager" [hidden]="loading$ | async">
-    <div class="table-wrapper">
+    <table mat-table class="full-width-min" [dataSource]="items$">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Nombre </th>
+        <td mat-cell *matCellDef="let product">
+          {{ product.name }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="barcode">
+        <th mat-header-cell *matHeaderCellDef> Codigo </th>
+        <td mat-cell *matCellDef="let product">
+          {{ product.barcode }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef> Precio </th>
+        <td mat-cell *matCellDef="let product">
+          ${{ product.price }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="currentStock">
+        <th mat-header-cell *matHeaderCellDef> Stock Actual </th>
+        <td mat-cell *matCellDef="let product">
+          {{ product.currentStock }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="criticalStock">
+        <th mat-header-cell *matHeaderCellDef> Stock Crítico </th>
+        <td mat-cell *matCellDef="let product">
+          {{ product.criticalStock }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef> Tipo </th>
+        <td mat-cell *matCellDef="let product">
+          {{ product.productType.name }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let product">
+          <button mat-button mat-icon-button type="button"
+            *ngIf="canEdit$ | async"
+            color="primary"
+            [disabled]="busy$ | async"
+            (click)="onClickEdit(product)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-button mat-icon-button type="button"
+            *ngIf="canDelete$ | async"
+            color="warn"
+            [disabled]="busy$ | async"
+            (click)="onClickDelete(product)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
 
-      <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Nombre </th>
-          <td mat-cell *matCellDef="let product">
-            {{ product.name }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="barcode">
-          <th mat-header-cell *matHeaderCellDef> Codigo </th>
-          <td mat-cell *matCellDef="let product">
-            {{ product.barcode }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="price">
-          <th mat-header-cell *matHeaderCellDef> Precio </th>
-          <td mat-cell *matCellDef="let product">
-            ${{ product.price }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="currentStock">
-          <th mat-header-cell *matHeaderCellDef> Stock Actual </th>
-          <td mat-cell *matCellDef="let product">
-            {{ product.currentStock }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="criticalStock">
-          <th mat-header-cell *matHeaderCellDef> Stock Crítico </th>
-          <td mat-cell *matCellDef="let product">
-            {{ product.criticalStock }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="type">
-          <th mat-header-cell *matHeaderCellDef> Tipo </th>
-          <td mat-cell *matCellDef="let product">
-            {{ product.productType.name }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let product">
-            <button mat-button mat-icon-button type="button"
-              *ngIf="canEdit$ | async"
-              color="primary"
-              [disabled]="busy$ | async"
-              (click)="onClickEdit(product)">
-              <mat-icon>edit</mat-icon>
-            </button>
-            <button mat-button mat-icon-button type="button"
-              *ngIf="canDelete$ | async"
-              color="warn"
-              [disabled]="busy$ | async"
-              (click)="onClickDelete(product)">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
+      <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
+    </table>
 
-        <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
-      </table>
-
-    </div>
-    <app-management-data-actions
-      *ngIf="canAdd$ | async"
-      (add)="onClickAdd()">
-    </app-management-data-actions>
   </div>
-
+  <app-management-data-actions
+    *ngIf="canAdd$ | async"
+    (add)="onClickAdd()">
+  </app-management-data-actions>
 </div>
