--- a/src/app/management/routes/sales/sell-manager.component.html
+++ b/src/app/management/routes/sales/sell-manager.component.html
@@ -1,53 +1,50 @@
-<div class="full-size">
-
-  <centered-mat-spinner *ngIf="loading$ | async">
+<div class="loading" *ngIf="loading$ | async">
+  <centered-mat-spinner>
   </centered-mat-spinner>
+</div>
+<div class="data-manager" [hidden]="loading$ | async">
+  <div class="table-wrapper">
 
-  <div class="data-manager" [hidden]="loading$ | async">
-    <div class="table-wrapper">
+    <table mat-table class="full-width-min" [dataSource]="items$">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> No. </th>
+        <td mat-cell *matCellDef="let sell">
+          {{ sell.id }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef> Fecha </th>
+        <td mat-cell *matCellDef="let sell">
+          {{ sell.soldOn }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let sell">
+            <button mat-button mat-icon-button type="button"
+              *ngIf="canEdit$ | async"
+              color="primary"
+              [disabled]="busy$ | async"
+              (click)="onClickEdit(sell)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-button mat-icon-button type="button"
+              *ngIf="canDelete$ | async"
+              color="warn"
+              [disabled]="busy$ | async"
+              (click)="onClickDelete(sell)">
+              <mat-icon>delete</mat-icon>
+            </button>
+        </td>
+      </ng-container>
 
-      <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef> No. </th>
-          <td mat-cell *matCellDef="let sell">
-            {{ sell.id }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="date">
-          <th mat-header-cell *matHeaderCellDef> Fecha </th>
-          <td mat-cell *matCellDef="let sell">
-            {{ sell.soldOn }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let sell">
-              <button mat-button mat-icon-button type="button"
-                *ngIf="canEdit$ | async"
-                color="primary"
-                [disabled]="busy$ | async"
-                (click)="onClickEdit(sell)">
-                <mat-icon>edit</mat-icon>
-              </button>
-              <button mat-button mat-icon-button type="button"
-                *ngIf="canDelete$ | async"
-                color="warn"
-                [disabled]="busy$ | async"
-                (click)="onClickDelete(sell)">
-                <mat-icon>delete</mat-icon>
-              </button>
-          </td>
-        </ng-container>
+      <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
+    </table>
 
-        <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
-      </table>
-
-    </div>
-    <app-management-data-actions
-      *ngIf="canAdd$ | async"
-      (add)="onClickAdd()">
-    </app-management-data-actions>
   </div>
-
+  <app-management-data-actions
+    *ngIf="canAdd$ | async"
+    (add)="onClickAdd()">
+  </app-management-data-actions>
 </div>
