--- a/src/app/management/routes/users/user-manager.component.html
+++ b/src/app/management/routes/users/user-manager.component.html
@@ -1,67 +1,65 @@
-<div class="full-size">
-
-  <centered-mat-spinner *ngIf="loading$ | async">
+<div class="loading" *ngIf="loading$ | async">
+  <centered-mat-spinner>
   </centered-mat-spinner>
+</div>
+<div class="data-manager" [hidden]="loading$ | async">
+  <div class="table-wrapper">
 
-  <div class="data-manager" [hidden]="loading$ | async">
-    <div class="table-wrapper">
+    <table mat-table class="full-width-min" [dataSource]="items$">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Nombre de Usuario </th>
+        <td mat-cell *matCellDef="let user">
+          {{ user.name }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="creationDate">
+        <th mat-header-cell *matHeaderCellDef> Fecha de Creación </th>
+        <td mat-cell *matCellDef="let user">
+          {{ user.createdOn }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="fullName">
+        <th mat-header-cell *matHeaderCellDef> Nombre Real </th>
+        <td mat-cell *matCellDef="let user">
+          {{ user.person.name }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="idCard">
+        <th mat-header-cell *matHeaderCellDef> Rut </th>
+        <td mat-cell *matCellDef="let user">
+          {{ user.person.idCard }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let user">
+          <div>
+            <button mat-button mat-icon-button type="button"
+              *ngIf="canEdit$ | async"
+              color="primary"
+              [disabled]="busy$ | async"
+              (click)="onClickEdit(user)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-button mat-icon-button type="button"
+              *ngIf="canDelete$ | async"
+              color="warn"
+              [disabled]="busy$ | async"
+              (click)="onClickDelete(user)">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </div>
+        </td>
+      </ng-container>
 
-      <table mat-table class="full-width-min" [dataSource]="items$">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Nombre de Usuario </th>
-          <td mat-cell *matCellDef="let user">
-            {{ user.name }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="creationDate">
-          <th mat-header-cell *matHeaderCellDef> Fecha de Creación </th>
-          <td mat-cell *matCellDef="let user">
-            {{ user.createdOn }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="fullName">
-          <th mat-header-cell *matHeaderCellDef> Nombre Real </th>
-          <td mat-cell *matCellDef="let user">
-            {{ user.person.name }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="idCard">
-          <th mat-header-cell *matHeaderCellDef> Rut </th>
-          <td mat-cell *matCellDef="let user">
-            {{ user.person.idCard }}
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef> </th>
-          <td mat-cell *matCellDef="let user">
-            <div>
-              <button mat-button mat-icon-button type="button"
-                *ngIf="canEdit$ | async"
-                color="primary"
-                [disabled]="busy$ | async"
-                (click)="onClickEdit(user)">
-                <mat-icon>edit</mat-icon>
-              </button>
-              <button mat-button mat-icon-button type="button"
-                *ngIf="canDelete$ | async"
-                color="warn"
-                [disabled]="busy$ | async"
-                (click)="onClickDelete(user)">
-                <mat-icon>delete</mat-icon>
-              </button>
-            </div>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
-      </table>
-    </div>
-
-    <app-management-data-actions
-      *ngIf="canAdd$ | async"
-      (add)="onClickAdd()">
-    </app-management-data-actions>
+      <tr mat-header-row *matHeaderRowDef="tableColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: tableColumns;"></tr>
+    </table>
   </div>
 
+  <app-management-data-actions
+    *ngIf="canAdd$ | async"
+    (add)="onClickAdd()">
+  </app-management-data-actions>
 </div>
+
