--- a/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
+++ b/src/app/management/routes/sales/form-dialog/sell-manager-form-dialog.component.html
@@ -33,8 +33,8 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field style="grid-area: client">
-        <mat-select placeholder="Cliente" formControlName="client">
+      <mat-form-field style="grid-area: customer">
+        <mat-select placeholder="Cliente" formControlName="customer">
           <mat-option *ngFor="let c of (customers$ | async)" [value]="c.id">
             {{ c.person.name }}
           </mat-option>
